hphp/hack/test/typecheck/reactive/test_global_class2.php.exp
File "test_global_class2.php", line 5, characters 10-11:
Static $a cannot be used in a reactive context. (Typing[4229])
