hphp/hack/test/typecheck/reactive/test_global_class2.php
<?hh // partial

<<__Rx>>
function foo(): int {
  static $a;
  $a = 5;
  return $a;
}
